--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,9 @@ venv/
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -39,10 +36,12 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.log
+*.pot
+*.pyc
 
 # PyInstaller
 *.manifest
@@ -100,7 +99,6 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
 venv/
 ENV/
 env.bak/
@@ -138,3 +136,24 @@ cache/
 # Cryptocurrency wallets and keys
 wallet.json
 keys.json
+
+# Data files
+data/
+*.db
+*.sqlite
+*.sqlite3
+
+# Streamlit specific
+.streamlit/secrets.toml
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# DEFIMIND specific
+production_config.json
+deployment_keys/
+*_credentials.json
+deploy_config.py
