--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,45 @@
 # Core dependencies
-python-dotenv==1.0.1
-numpy==1.26.4
-tensorflow==2.15.0
-openai==1.15.0
-
-# Web3 and blockchain interaction
+python-dotenv==1.0.0
+aiohttp==3.10.1
+websockets==12.0
+pandas==2.2.0
+numpy==1.26.3
+ccxt==4.2.30
 web3==6.15.1
 
+# Data persistence
+sqlalchemy==2.0.25
+tqdm==4.66.2
+
+# Machine learning
+scikit-learn==1.4.0
+matplotlib==3.8.2
+joblib==1.3.2
+
+# Dashboard & visualization
+streamlit==1.31.0
+plotly==5.18.0
+pydeck==0.8.0
+
+# Debugging and profiling
+rich==13.7.0
+debugpy==1.8.0
+
+# Testing
+pytest==7.4.4
+pytest-asyncio==0.21.1
+
+# Development
+black==23.12.1
+isort==5.13.2
+flake8==6.1.0
+mypy==1.8.0
+
+# Documentation
+sphinx==7.2.6
+sphinx-rtd-theme==1.3.0
+
 # Async support
-aiohttp==3.9.3
 asyncio==3.4.3
 
 # Utilities
