Project restructuring: Organize files into logical directories, update imports, and improve documentation

--- a/.env.template
+++ b/.env.template
@@ -1,34 +1,78 @@
-# DEFIMIND Configuration Template
-# Copy this file to .env and fill in your actual values
+# DEFIMIND Environment Configuration Template
+# Copy this file to .env and fill in the values for your environment
 
-# Agent Configuration
-AGENT_USE_LLM=true
+# ==== General Configuration ====
+ENVIRONMENT=development  # development, production
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
 AGENT_NAME=DEFIMIND
-AGENT_HOME=DEFIMIND
-AGENT_CYCLE_INTERVAL=20
-TOTAL_INVESTMENT=100
-MAX_SINGLE_PROTOCOL_ALLOCATION=0.5
-LOG_LEVEL=INFO
 
-# LLM Provider Configuration
-LLM_PROVIDER=openrouter
-OPENROUTER_API_KEY=your-openrouter-api-key
+# ==== Blockchain API Keys ====
+# Alchemy API - https://www.alchemy.com/
+ALCHEMY_API_KEY=your_alchemy_api_key_here
+ALCHEMY_ETH_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/your_key_here
+ALCHEMY_SOLANA_RPC_URL=https://solana-mainnet.g.alchemy.com/v2/your_key_here
+ALCHEMY_POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v2/your_key_here
+ALCHEMY_ARBITRUM_RPC_URL=https://arb-mainnet.g.alchemy.com/v2/your_key_here
 
-# Blockchain RPCs
-ETHEREUM_RPC_URL=your-ethereum-rpc-url
-POLYGON_RPC_URL=your-polygon-rpc-url
-INFURA_RPC_URL=your-infura-rpc-url
+# Infura API - https://infura.io/
+INFURA_API_KEY=your_infura_api_key_here
+INFURA_ETH_RPC_URL=https://mainnet.infura.io/v3/your_key_here
 
-# API Keys
-ALCHEMY_API_KEY=your-alchemy-api-key
+# ==== Market Data APIs ====
+# CoinGecko API - https://www.coingecko.com/
+COINGECKO_API_KEY=your_coingecko_api_key_here
+COINGECKO_PRO_URL=https://pro-api.coingecko.com/api/v3
 
-# LangChain and LangSmith Configuration (optional)
-LANGSMITH_TRACING=true
-LANGSMITH_ENDPOINT=https://api.smith.langchain.com
-LANGSMITH_API_KEY=your-langsmith-api-key
-LANGSMITH_PROJECT=DeFiMind
+# DeFi Llama API (free, no key needed)
+DEFILLAMA_API_URL=https://api.llama.fi
 
-# Deployment Configuration
-DASHBOARD_HOST=0.0.0.0
+# ==== Trading APIs ====
+# 1inch API - https://1inch.io/
+ONEINCH_API_KEY=your_1inch_api_key_here
+
+# ==== AI/ML API Keys ====
+# OpenAI API - https://platform.openai.com/
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4-turbo
+
+# Anthropic API - https://www.anthropic.com/
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+ANTHROPIC_MODEL=claude-3-opus-20240229
+
+# LangChain and LangSmith configuration
+LLM_PROVIDER=openai  # openai, anthropic, openrouter, etc.
+LANGCHAIN_VERBOSE=true
+LANGSMITH_API_KEY=your_langsmith_api_key_here
+LANGSMITH_PROJECT=defimind-agent
+
+# ==== Wallet Information ====
+# WARNING: Never commit real private keys to GitHub!
+# Solana Wallet
+SOLANA_WALLET_ADDRESS=your_solana_address_here
+SOLANA_PRIVATE_KEY=your_solana_private_key_here
+
+# Ethereum Wallet
+ETH_WALLET_ADDRESS=your_eth_address_here
+ETH_PRIVATE_KEY=your_eth_private_key_here
+
+# ==== Database Connection ====
+# TimescaleDB or PostgreSQL
+DATABASE_URL=postgresql://username:password@localhost:5432/defimind
+DATABASE_TYPE=timescale  # timescale, postgres, sqlite
+
+# ==== Dashboard Configuration ====
 DASHBOARD_PORT=8501
-DASHBOARD_BASE_URL= 
+DASHBOARD_HOST=0.0.0.0
+DASHBOARD_TITLE=DEFIMIND Trading Agent
+DASHBOARD_THEME=dark  # dark, light
+DASHBOARD_REFRESH_INTERVAL=60  # seconds
+
+# ==== Agent Configuration ====
+TRADING_ENABLED=false  # Set to true to enable real trading
+SIMULATION_MODE=true  # Set to false for real trading
+MAX_POSITION_SIZE_USD=1000  # Maximum position size in USD
+RISK_TOLERANCE=medium  # low, medium, high
+REBALANCE_THRESHOLD=0.05  # 5% deviation triggers rebalance
+MAX_SLIPPAGE=0.01  # 1% maximum slippage
+GAS_PRICE_THRESHOLD=100  # Maximum gas price in Gwei for transactions
+AUTO_COMPOUND=true  # Automatically compound yields 
