Added environment templates and Digital Ocean deployment variables

--- a/.env.template
+++ b/.env.template
@@ -5,8 +5,12 @@
 ENVIRONMENT=development  # development, production
 LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
 AGENT_NAME=DEFIMIND
+PORT=8080  # Required for Digital Ocean
 
 # ==== Blockchain API Keys ====
+# Etherscan API - https://etherscan.io/
+ETHERSCAN_API_KEY=your_etherscan_api_key_here
+
 # Alchemy API - https://www.alchemy.com/
 ALCHEMY_API_KEY=your_alchemy_api_key_here
 ALCHEMY_ETH_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/your_key_here
@@ -33,7 +37,9 @@ ONEINCH_API_KEY=your_1inch_api_key_here
 # ==== AI/ML API Keys ====
 # OpenAI API - https://platform.openai.com/
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4-turbo
+OPENAI_MODEL=gpt-4o
+LLM_MODEL=gpt-4o
+LLM_TEMPERATURE=0.2
 
 # Anthropic API - https://www.anthropic.com/
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
@@ -54,6 +60,8 @@ SOLANA_PRIVATE_KEY=your_solana_private_key_here
 # Ethereum Wallet
 ETH_WALLET_ADDRESS=your_eth_address_here
 ETH_PRIVATE_KEY=your_eth_private_key_here
+ETH_NETWORK=mainnet
+WEB3_PROVIDER_URI=https://mainnet.infura.io/v3/${INFURA_API_KEY}
 
 # ==== Database Connection ====
 # TimescaleDB or PostgreSQL
@@ -70,9 +78,16 @@ DASHBOARD_REFRESH_INTERVAL=60  # seconds
 # ==== Agent Configuration ====
 TRADING_ENABLED=false  # Set to true to enable real trading
 SIMULATION_MODE=true  # Set to false for real trading
-MAX_POSITION_SIZE_USD=1000  # Maximum position size in USD
+MAX_POSITION_SIZE=0.1  # As a decimal (10%)
 RISK_TOLERANCE=medium  # low, medium, high
+REBALANCE_FREQUENCY=weekly  # daily, weekly, monthly
 REBALANCE_THRESHOLD=0.05  # 5% deviation triggers rebalance
 MAX_SLIPPAGE=0.01  # 1% maximum slippage
 GAS_PRICE_THRESHOLD=100  # Maximum gas price in Gwei for transactions
-AUTO_COMPOUND=true  # Automatically compound yields 
+AUTO_COMPOUND=true  # Automatically compound yields
+
+# ==== Browser Automation ====
+BROWSER_HEADLESS=true  # Set to true for server deployment
+
+# ==== Digital Ocean Configuration ====
+DO_APP_ENV=production  # production, development 
